02/02/06 (relf)
  * NEED_ASPRINTF, NEED_GETLINE are replaced with GGNFS_GNU_MISSING
  which is now defined in ggnfs.h
  * fixed all affected headers
  * WARNING: if GNU extensions are used, <stdio.h> should not be included directly
  but through ggnfs.h or at least after it

12/12/05 (trilliwig)
  * Header file fixes for Linux.

12/02/05 (relf)
  * matbuild-tpie.c merged with matbuild.c
  * matbuild.c minor cleanups

12/01/05 (relf)
  * file size/offset types changed to off_t
  * ULL_NO_UL is defined for 32-bit platforms
  * minor cleanups in mpz-ull.c
  * rel_list members became unsigned
  * readRawS32/writeRawS32 definition moved to ggnfs.h

11/16/05 (aSL)
  * Some factLat.pl changes by Mark Rodenkirch

11/04/05 (relf)
  * __ppc64__ is used together with __ppc__
  * GNFS_CS32 is removed, bc_t is defined as `unsigned long'
  * ULL_NO_UL is back, it must be defined whenever 'long long' is different from 'long'

10/30/05 (trilliwig)
  * Patched factLat.pl with Bob Backstrom's suggested change.  Updated q0-q1
    ranges are printed in ggnfs.log.
  * Minor update in misc.c to correct multiple printings of a status message. 

9/30/05 (trilliwig)
  * It makes no sense to disable HAVE_FLOAT64 if HAVE_ASM_INTEL is defined.
    This causes pol51m0b to miss essential polynomials and causes the abnormal
    exit messages "lambda-comp" or "ull5a5p-comp".  The only bug that exists
    with both options enabled is that the compiled binary is completely broken
    if we allow compiler optimization with GCC 3.4.  This appears to be a bug
    with GCC 3.4, but disabling HAVE_FLOAT64 for MinGW is NOT a proper
    workaround because it leaves pol5 compiles broken on 32-bit Linux!  The
    correct workaround is disabling compiler optimizations for pol5 when
    GCC 3.4 is used.
  * Modified factLat.pl so pol5 errors are fatal errors again.
  * Modified matbuild so errors from checkMat() are not immediately fatal.
    The code is there to delete problematic rows, but it was never used